# office-platform-pro

./: README.md
app/: .eslintrc.js  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js  web-types.json
app/public/linux-command/: ab.md.html  accept.md.html  ack.md.html  alias.md.html  apachectl.md.html  apk.md.html  apropos.md.html  apt-get.md.html  apt-key.md.html  apt-sortpkgs.md.html  aptitude.md.html  ar.md.html  arch.md.html  arj.md.html  arp.md.html  arpd.md.html  arping.md.html  arptables.md.html  arpwatch.md.html  as.md.html  at.md.html  atop.md.html  atq.md.html  atrm.md.html  awk.md.html  axel.md.html  badblocks.md.html  base64.md.html  basename.md.html  batch.md.html  bc.md.html  bg.md.html  bind.md.html  blkid.md.html  blockdev.md.html  bmodinfo.md.html  break.md.html  builtin.md.html  bunzip2.md.html  bye.md.html  (+537 more)
app/script/: update-linux-command.mjs
app/src/: app.vue  main.js
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/script/: gen_message_proto.cmd
app/src-tauri/src/: app.rs  client.rs  main.rs  sqlite.rs
app/src-tauri/src/code_snippet/: mod.rs
app/src-tauri/src/devtool/: base64.rs  convert.rs  image.rs  json.rs  mod.rs  url.rs
app/src-tauri/src/socket_client/: mod.rs
app/src-tauri/src/socket_client/proto/: message.rs
app/src/layout/: index.js  index.scss  index.vue
app/src/plugins/: monaco.js
app/src/router/: index.js
app/src/store/: config.js
backup/code_snippet/: mod.rs
backup/snippet/: index.scss  index.vue
example/src/: basic_grammar.rs  condition.rs  data_type.rs  function.rs  main.rs  ownership.rs  ownership_func.rs  print.rs  rent.rs  repeat.rs  shadowing.rs  slice.rs  struct.rs  switch.rs
server/: .gitignore  go.mod  go.sum
server/config/: config.toml
server/script/: gen_message_proto.cmd
(+45 files in other folders)
