[package]
name = "coder-desktop"
version = "0.0.1"

authors = ["ggymm"]
license = "MIT"
repository = "https://github.com/ggymm/coder"

edition = "2021"
default-run = "coder-desktop"


[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
