[package]
name = "coder-desktop"
version = "0.0.1"

authors = ["ggymm"]
license = "MIT"
repository = "https://github.com/ggymm/coder"

edition = "2021"
default-run = "coder-desktop"


[dependencies]
protobuf = "3.1.0"

tauri = { version = "1.0.3", features = ["api-all"] }


[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
